clusters/eksctl-lab-smesenAP/workloads/webpage/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: deploy-webpage
  
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: webpage
  template:
    metadata:
      name: webpage
      labels:
        version: 1.1.7
        app: webpage

    spec:
      containers:
      - name: webpage
        image: kustomize-defined
        ports:
        - containerPort:  8080
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/config.js
          subPath: config.js
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: cm-webpage-config
          items: # convierte las entradas CM-data en archivos dentro del volumen.
            - key: CONFIG_JS
              path: config.js
