clusters/eksctl-lab-smesenAP/workloads/webpage/base/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-webpage

spec:
  selector:
    app: webpage
  ports:
    - name: http
      port: 80
      targetPort: 80
