clusters/eksctl-lab-smesenAP/workloads/webpage/base/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-webpage
spec:
  gateways:
  - default/default-gateway
  hosts:
  - smesen.vendoamigos.com
  http:
    - route:
        - destination:
            host: svc-webpage.public.svc.cluster.local # service name (FQDN)
            port:
              number: 80
